# gl-danmaku

./: .clang_complete  CMakeLists.txt  LICENSE
assets/: etama.psd  reimu.pmx  suwako.pmx  test1.vmd  test2.vmd  utsuho.pmx  wall1.psd  wall2.psd  wall3.psd
include/: application.hpp  box.hpp  builder.hpp  common.hpp  component.hpp  config.hpp  core.hpp  danmaku_builder.hpp  fiber.hpp  light.hpp  mmd-physics  model.hpp  motion.hpp  object_box.hpp  renderer.hpp  scene.hpp  scene_box.hpp  shader.hpp  texture.hpp  util.hpp  vertex.hpp
include/component/: camera.hpp  character.hpp  layer.hpp  light.hpp  light_manager.hpp  model.hpp  particle.hpp  provider.hpp  script.hpp  shader.hpp  texture.hpp  transform.hpp
include/core/: application.hpp  box.hpp  fiber.hpp  object.hpp  scene.hpp
include/vertex/: base.hpp  danmaku.hpp  debug.hpp  light.hpp  trail.hpp
lib/: libmmd-physics.dylib  libmmd-tools.dylib
src/: application.cc  ext.hpp  fiber.cc  helper.hpp  log.hpp  main.cc  model.cc  motion.cc  shader.cc  texture.cc
src/builder/: advanced.cc  base.cc  common.cc  common.hpp  random.cc
src/component/: basic_motion.cc  basic_motion.hpp  camera.cc  character.cc  danmaku.cc  danmaku_provider.cc  danmaku_provider.hpp  layer.cc  light.cc  model.cc  program_particle.hpp  shader.cc  texture.cc  trail.cc
src/core/: application.cc  box.cc  fiber.cc  object.cc  program.hpp  scene.cc
src/object/: bone.cc  bone.hpp  character.cc  character.hpp  character_renderer.cc  common.cc  danmaku.cc  danmaku_transform.cc  debug.cc  debug_proto.hpp  ext.hpp  layer.cc  layer.hpp  layer_program.cc  layer_program.hpp  program_renderer.hpp  renderer.cc  skybox.cc  skybox_dynamic.cc  trail.cc  trail_transform.cc  transform_renderer.hpp  vertex.hpp
src/scene/: common.cc  scene1.cc  scene_ext.cc  scene_ext.hpp
src/script/: common.cc  common.hpp  scene1.cc
src/shader/: base.cc  character.cc  common.cc  danmaku.cc  danmaku_transform.cc  debug.cc  dynamic.cc  lambert.cc  lambert_dynamic.cc  layer.cc  trail.cc  trail_transform.cc
